<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/make_relations"/>


       <TextView

            android:id="@+id/person1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
           android:textColor="@color/black"
            android:inputType="textCapWords"
           android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"


            android:hint="@string/person1"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/relation_between"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <AutoCompleteTextView
            android:id="@+id/relation_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"

            app:layout_constraintTop_toBottomOf="@id/person1"
            app:layout_constraintBottom_toTopOf="@id/person2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:hint="@string/relation_between"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/person2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/person2"
            android:textSize="20sp"
            android:textColor="@color/black"

            android:inputType="textCapWords"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"

            app:layout_constraintTop_toBottomOf="@id/relation_between"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <Button
            android:id="@+id/relation_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/add_relation_button"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"

            app:layout_constraintTop_toBottomOf="@id/person2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="@{person1.text.length() &gt; 0 &amp;&amp; person2.text.length() &gt; 0 &amp;&amp; relationBetween.text.length() &gt; 0}"
            android:background="#0000FF"
        android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>